@@ -5,6 +5,9 @@ ikiwiki (3.20150615) UNRELEASED; urgency=medium
   * img test: Bail gracefully when ImageMagick is not present.
   * meta: Fix [[!meta name=foo]] by closing the open quote.
 
+  [ Joey Hess ]
+  * emailauth: Added emailauth_sender config.
+
  -- Simon McVittie <smcv@debian.org>  Mon, 15 Jun 2015 18:13:23 +0100
 
 ikiwiki (3.20150614) unstable; urgency=medium
